--- a/ToolSet/ToolSet.csproj
+++ b/ToolSet/ToolSet.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>F:\Easyx265Gui\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>0</WarningLevel>
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="CommandLine\Eac3toCommand.cs" />
     <Compile Include="CommandLine\ffmpegCommand.cs" />
+    <Compile Include="CommandLine\MkvMergeCommand.cs" />
     <Compile Include="CommandLine\Mp4boxCommand.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
